Allow to replay (fix modal z-index) :trophy:

--- a/src/components/WinnerModal.css
+++ b/src/components/WinnerModal.css
@@ -4,14 +4,15 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 2;
 }
 
 .WinnerModal__inner {
-  width: 400px;
+  width: 470px;
   background: #222;
   border: 2px solid #333;
   border-radius: 5px;
@@ -21,6 +22,13 @@
 .WinnerModal__buttons {
   display: flex;
   justify-content: space-between;
+}
+
+.WinnerModal__buttons button {
+  font-size: 110%;
+}
+.WinnerModal__buttons button:last-child {
+  margin-left: 10px;
 }
 
 .WinnerModal h2 {
